<resources>
    <string name="app_name">PENTESTER TOOLKIT</string>
    <string name="site_mapper">SITE MAPPER</string>
    <string name="http_monitor">HTTP MONITOR</string>
    <string name="encoder">ENCODER</string>
    <string name="hasher">HASHER</string>
    <string name="repeater">REPEATER</string>
    <string name="intruder">INTRUDER</string>
    <string name="google_dork">GOOGLE DORK</string>
    <string name="http_server">HTTP SERVER</string>
    <string name="ping_utility">PING UTILITY</string>
    <string name="port_scan">PORT SCAN</string>
    <string name="privacy">PRIVACY</string>
    <string name="notes">NOTES</string>
    <string name="hint_ping_utility">ENTER HOST ADDRESS</string>
    <string name="hint_port_scan">ENTER IP ADDRESS</string>
    <string name="hint_text">ENTER TEXT</string>
    <string name="encode">ENCODE</string>
    <string name="decode">DECODE</string>
    <string name="proxy_host">HOST</string>
    <string name="proxy_port">PORT</string>
    <string name="proxy_country">COUNTRY</string>
    <string name="proxy">PROXY</string>
    <string name="anonymity">ANONYMITY</string>
    <string name="protocols">PROTOCOLS</string>
    <string name="uptime">UPTIME</string>
    <string name="latency">LATENCY</string>
    <string name="google">GOOGLE</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="start_server">START HTTP SERVER</string>
    <string name="http_server_logs">HTTP SERVER LOGS</string>
    <string name="enter_note">Enter Note...</string>
    <string name="add_note">ADD NOTE</string>
    <string name="update_note">UPDATE NOTE</string>
    <string name="delete_note">DELETE NOTE</string>
    <string name="copy_note">COPY NOTE</string>
    <string name="enter_query">ENTER QUERY</string>
    <string name="enter_url">ENTER URL</string>
    <string name="sitemap">SITE MAP</string>
    <string name="host">HOST</string>
    <string name="url">URL</string>
    <string name="verb">VERB</string>
    <string name="type">TYPE</string>
    <string name="open_browser">OPEN BROWSER</string>
    <string name="go">GO</string>
    <string name="sendToRepeater">SEND TO REPEATER</string>
    <string name="sendToIntruder">SEND TO INTRUDER</string>
    <string name="sendRequest">SEND REQUEST</string>
    <string name="dummyRequest">GET / HTTP/1.1\nHost: example.com</string>
    <string name="dummyResponse">HTTP/1.1 200 OK\nContent-Type: application/json\nContent-Length: 86\n\n{\n"id": 123,\n"name": "John Doe",\n"email": "johndoe@example.com",\n"created_at": "2023-05-15T12:34:56Z",\n"updated_at": "2023-05-15T12:34:56Z"\n}</string>
    <string name="render">RENDER</string>
    <string name="intrude">INTRUDE</string>
    <string name="configure">CONFIGURE</string>
    <string name="choose_payload">Please Choose Payload</string>
    <string name="sniper_attack">SNIPER</string>
    <string name="pitch_fork_attack">PITCH FORK</string>
    <string name="cluster_bomb_attack">CLUSTER BOMB</string>
    <string name="enter_payload">ENTER PAYLOADS</string>
    <string name="FILE_PAYLOAD">FILE PAYLOAD</string>
    <string name="INPUT_PAYLOAD">INPUT PAYLOAD</string>
    <string name="done">DONE</string>
    <string name="user_directed">USER-DIRECTED SPIDERING</string>
    <string name="automated">AUTOMATED SPIDERING</string>
    <string name="PING">PING</string>
    <string name="frequency">ENTER FREQUENCY</string>
    <string name="compare">COMPARE</string>
    <string name="scan">SCAN</string>
    <string name="start">START PORT#</string>
    <string name="end">END PORT#</string>
    <string name="save">SAVE</string>
    <string name="file_editor">FILE EDITOR</string>
    <string name="file_explorer">OPEN FILE EXPLORER</string>
    <string name="agreement">ETHICAL USE AGREEMENT</string>
    <string name="agreement_text">By using the "PENTESTER TOOLKIT" App, you acknowledge and agree to abide by the terms and conditions outlined in below Ethical Use Agreement. Failure to comply with these terms may result in the termination of your access to the App.\n\nPlease read this Agreement carefully and ensure that you understand and agree to its terms before using the "PENTESTER TOOLKIT" App.\n\nETHICAL USE AGREEMENT:\n\n1. Acceptable Use\n\na. You agree to use the tools provided by the App only for lawful purposes and in an ethical manner.\n\nb. You shall not use the App or its tools for any illegal activities, unauthorized access to systems or data, or any actions that violate applicable laws or regulations.\n\n2. Responsibility and Liability\n\na. You are solely responsible for your actions and use of the App and its tools.\n\n3. Ethical Use and Legal Compliance\n\na. You agree to use the App and its tools in a manner that respects the rights and privacy of others.</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="search">SEARCH</string>
    <string name="output">OUTPUT</string>
</resources>