<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSiteMapper"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/site_mapper"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnHttpMonitor"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/http_monitor"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRepeater"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/repeater"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnIntruder"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/intruder"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEncoder"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/encoder"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnHasher"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/hasher"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoogleDork"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/google_dork"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnHttpServer"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/http_server"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPingUtility"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/ping_utility"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnPortScan"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/port_scan"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrivacy"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/privacy"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnNotes"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/notes"
                android:textColor="@color/primary"
                app:backgroundTint="@color/secondary"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>