<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtVerbHttpMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/primary"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/verb" />

        <TextView
            android:id="@+id/txtHostHttpMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="@color/primary"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/host" />

        <TextView
            android:id="@+id/txtUrlHttpMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textColor="@color/primary"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/url" />




    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"/>

</LinearLayout>