<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/secondary"
    tools:context=".Notes.UpdateNote">



    <EditText
        android:id="@+id/edtNoteUpdateActivity"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_edittext"
        android:gravity="top"
        android:hint="@string/enter_note"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textCursorDrawable="@null"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnUpdateNote"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:text="@string/update_note"
        android:textColor="@color/primary"
        app:backgroundTint="@color/secondary"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnDeleteNote"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/delete_note"
        android:textColor="@color/primary"
        app:backgroundTint="@color/secondary"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCopyNote"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/copy_note"
        android:textColor="@color/primary"
        app:backgroundTint="@color/secondary"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp" />
</LinearLayout>