<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary"
    tools:context=".Intruder.ConfigureIntrusionActivity">


    <TextView
        android:id="@+id/txtTitleIntConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/intruder"
        android:textColor="@color/primary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/pyld_pos_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:spinnerMode="dropdown"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:drawableEnd="@drawable/file"
                android:padding="10dp"
                android:text="@string/choose_payload"
                android:textColor="@color/primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="OR"
                android:textColor="@color/primary" />

            <EditText
                android:id="@+id/edtPayload"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:gravity="top"
                android:hint="@string/enter_payload"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary"
                android:textCursorDrawable="@null"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:buttonTint="@color/radio_button_color"
                    android:text="@string/FILE_PAYLOAD"
                    android:textColor="@color/primary" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/radio_button_color"
                    android:text="@string/INPUT_PAYLOAD"
                    android:textColor="@color/primary" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnIntrude"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/intrude"

        android:textColor="@color/primary"
        app:backgroundTint="@color/secondary"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp" />


</LinearLayout>