<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/agreement"
        android:textColor="@color/primary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement_text"
                android:textColor="@color/primary"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnAcceptAgreement"
            style="@style/Widget.MaterialComponents.TimePicker.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textColor="@color/primary"
            app:backgroundTint="@color/secondary"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnDeclineAgreement"
            style="@style/Widget.MaterialComponents.TimePicker.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/decline"
            android:textColor="@color/primary"
            app:backgroundTint="@color/secondary"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp" />
    </LinearLayout>

</LinearLayout>